Agregando Sass solamente a Valores.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="header">
@@ -60,63 +65,68 @@
           </div>
         </div>
       </section>
-
-      <section class="historia">
-        <article>
-          <h2 class="paddinghistoria">Historia Odontología</h2>
-          <p class="textohistoria">
-            La Historia se ocupa de darnos a conocer la existencia de las
-            enfermedades de la boca, su antigüedad, pero sobre todo cuáles han
-            sido las creencias de los humanos a lo largo de los siglos en
-            relación a la causa de estos males y el interés en combatirlos a lo
-            largo de los tiempos. Sólo daremos algunos ejemplos. A través de la
-            Historia conocemos que en China, 4.000 años a.d. C. se usaba el
-            ‘juncofarmaceútico’ a base de caparazones de cigarras, orina de
-            tortuga y cuernos pulverizados entre otros ingredientes. Usaban ya
-            el cepillo dental y conocían una técnica de blanqueamiento de los
-            dientes anteriores. Empleaban arsénico para matar los gusanos que,
-            según ellos, producían la caries en el interior del diente. Las
-            enfermedades de las encías las trataban con acupuntura y prohibían
-            curar dolores de boca el décimo día de cada mes. Fueron los primeros
-            en utilizar la amalgama para los empastes. Los hindúes, muy
-            propensos a la automedicación, empleaban para las llagas de la boca,
-            unas píldoras a base de corteza de pimiento de Chaba, y unos
-            enjuagues con mostaza, gengibre, pimienta de Bengal y sal. El templo
-            dedicado al diente de Buda en Ceilán refleja la importancia que
-            conceden al estado de salud de su boca.
-          </p>
-        </article>
-        <article>
-          <h2 class="paddinghistoria">Historia Empresa</h2>
-          <p class="textohistoria">
-            El término odontólogo deriva del griego odont(o) (ὀδο-ύς/-ντος), que
-            en español significa diente. Dentista proviene del latín dents,
-            dentis, que en español significa diente. Se puede definir al
-            odontólogo o dentista como médico de la cavidad oral o aparato
-            estomatognático. El aparato estomatognático lo constituyen los
-            labios, la lengua, los dientes, el periodonto, el paladar, la mucosa
-            oral, el piso de la boca, las glándulas salivales, las amígdalas y
-            la orofaringe. El término estomatología deriva del griego στόμα
-            (estoma), que en español significa boca o cavidad oral se emplea en
-            general como sinónimo de odontología. El campo de acción del
-            odontólogo o estomatólogo no abarca únicamente el estudio y
-            tratamiento de los dientes, pues comprende además toda la cavidad
-            oral, así como los maxilares, músculos, piel, vasos y nervios que
-            dan conformación a esta cavidad y que están conectados con todo el
-            organismo. La odontología se relaciona con varias especialidades
-            médicas como cirugía maxilofacial, otorrinolaringología,
-            oftalmología, neurología y pediatría. No todas las enfermedades de
-            la boca son tratadas por el odontólogo, las lesiones malignas
-            (cáncer) entran en el campo de la patología oral, la cirugía
-            maxilofacial y la oncología. Las lesiones de la orofaringe y las
-            amígdalas tampoco son tratadas por el odontólogo, sino por el
-            otorrinolaringólogo, las parálisis de los músculos que mueven las
-            estructuras orales son tratadas por el neurólogo, las enfermedades
-            del labio son tratadas y valoradas generalmente por el dermatólogo,
-            etc.
-          </p>
-        </article>
-      </section>
+      <div class="container">
+        <section class="historia">
+          <div class="row textos">
+            <article class="col-md-5">
+              <h2 class="paddinghistoria">Historia Odontología</h2>
+              <p class="textohistoria">
+                La Historia se ocupa de darnos a conocer la existencia de las
+                enfermedades de la boca, su antigüedad, pero sobre todo cuáles
+                han sido las creencias de los humanos a lo largo de los siglos
+                en relación a la causa de estos males y el interés en
+                combatirlos a lo largo de los tiempos. Sólo daremos algunos
+                ejemplos. A través de la Historia conocemos que en China, 4.000
+                años a.d. C. se usaba el ‘juncofarmaceútico’ a base de
+                caparazones de cigarras, orina de tortuga y cuernos pulverizados
+                entre otros ingredientes. Usaban ya el cepillo dental y conocían
+                una técnica de blanqueamiento de los dientes anteriores.
+                Empleaban arsénico para matar los gusanos que, según ellos,
+                producían la caries en el interior del diente. Las enfermedades
+                de las encías las trataban con acupuntura y prohibían curar
+                dolores de boca el décimo día de cada mes. Fueron los primeros
+                en utilizar la amalgama para los empastes. Los hindúes, muy
+                propensos a la automedicación, empleaban para las llagas de la
+                boca, unas píldoras a base de corteza de pimiento de Chaba, y
+                unos enjuagues con mostaza, gengibre, pimienta de Bengal y sal.
+                El templo dedicado al diente de Buda en Ceilán refleja la
+                importancia que conceden al estado de salud de su boca.
+              </p>
+            </article>
+            <article class="col-md-5">
+              <h2 class="paddinghistoria">Historia Empresa</h2>
+              <p class="textohistoria">
+                El término odontólogo deriva del griego odont(o) (ὀδο-ύς/-ντος),
+                que en español significa diente. Dentista proviene del latín
+                dents, dentis, que en español significa diente. Se puede definir
+                al odontólogo o dentista como médico de la cavidad oral o
+                aparato estomatognático. El aparato estomatognático lo
+                constituyen los labios, la lengua, los dientes, el periodonto,
+                el paladar, la mucosa oral, el piso de la boca, las glándulas
+                salivales, las amígdalas y la orofaringe. El término
+                estomatología deriva del griego στόμα (estoma), que en español
+                significa boca o cavidad oral se emplea en general como sinónimo
+                de odontología. El campo de acción del odontólogo o estomatólogo
+                no abarca únicamente el estudio y tratamiento de los dientes,
+                pues comprende además toda la cavidad oral, así como los
+                maxilares, músculos, piel, vasos y nervios que dan conformación
+                a esta cavidad y que están conectados con todo el organismo. La
+                odontología se relaciona con varias especialidades médicas como
+                cirugía maxilofacial, otorrinolaringología, oftalmología,
+                neurología y pediatría. No todas las enfermedades de la boca son
+                tratadas por el odontólogo, las lesiones malignas (cáncer)
+                entran en el campo de la patología oral, la cirugía maxilofacial
+                y la oncología. Las lesiones de la orofaringe y las amígdalas
+                tampoco son tratadas por el odontólogo, sino por el
+                otorrinolaringólogo, las parálisis de los músculos que mueven
+                las estructuras orales son tratadas por el neurólogo, las
+                enfermedades del labio son tratadas y valoradas generalmente por
+                el dermatólogo, etc.
+              </p>
+            </article>
+          </div>
+        </section>
+      </div>
     </main>
 
     <footer>
