--- a/Contacto.html
+++ b/Contacto.html
@@ -6,124 +6,148 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contacto</title>
     <link rel="stylesheet" href="./Contacto.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="background">
       <div class="header">
-      <img src="./Fotos/Logo.jpg" alt="Logo" class="header__logo" />
-      <nav class="header__navegacion">
-        <ul class="header__navegacion--lista">
-          <li><a href="index.html"> Home </a></li>
-          <li><a href="Tratamientos.html"> Tratamientos</a></li>
-          <li><a href="Profesionales.html"> Profesionales</a></li>
-          <li><a href="Valores.html"> Valores</a></li>
-          <li><a class="active" href="Contacto.html"> Contacto</a></li>
-        </ul>
-      </nav>
-      <div class="hamgurger-menu">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
+        <img src="./Fotos/Logo.jpg" alt="Logo" class="header__logo" />
+        <nav class="header__navegacion">
+          <ul class="header__navegacion--lista">
+            <li><a href="index.html"> Home </a></li>
+            <li><a href="Tratamientos.html"> Tratamientos</a></li>
+            <li>
+              <a class="active" href="Profesionales.html"> Profesionales</a>
+            </li>
+            <li><a href="Valores.html"> Valores</a></li>
+            <li><a href="Contacto.html"> Contacto</a></li>
+          </ul>
+        </nav>
       </div>
-    </div>
     </header>
     <main>
       <div class="titulo">
         <h1>CONTACTO</h1>
       </div>
-      <form>
-        <fieldset class="formulario">
-          <legend class="legend">Información</legend>
-          <!-- Radio button -->
-          <div class="margen-arriba-y-abajo">
-            <label class="margen-izquierda" for="Masculino">Masculino</label>
-            <input  type="radio" value="opc1" name="Genero" id="Masculino" />
-
-            <label class="margen-izquierda" for="Femenino">Femenino</label>
-            <input type="radio" value="opc2" name="Genero" id="Femenino" />
-
-            <label class="margen-izquierda" for="Otro">Otro</label>
-            <input type="radio" value="opc3" name="Genero" id="Otro" />
-          </div>
-          <hr />
-
-          <!-- Input nombre -->
-          <div class="margen-arriba-y-abajo">
-            <div >
-            <label class="margen-izquierda" for="Nombre">Nombre</label>
-            <input id="input" class="margen-casilleros"
-              name="nombre"
-              id="nombre"
-              type="text"
-              placeholder="Ingrese su Nombre"
-            />
-
-            <!-- Input Apellido -->
-            <label class="margen-izquierda" for="apellido">Apellido</label>
-            <input id="input" class="margen-casilleros"
-              name="apellido"
-              id="apellido"
-              type="text"
-              placeholder="Ingrese su Apellido"
-            />
-            </div>
+      <div class="row">
+        <form action="a">
+          <fieldset class="formulario">
+            <legend class="legend">Información</legend>
+            <!-- Radio button -->
             <div class="margen-arriba-y-abajo">
-            <label  class="margen-izquierda" for="Numero">Teléfono</label>
-            <input id="input" class="margen-casilleros"
-              name="Numero"
-              id="Numero"
-              type="number"
-              placeholder="Ingrese su Número"
-            />
+              <label class="margen-izquierda" for="Masculino">Masculino</label>
+              <input type="radio" value="opc1" name="Genero" id="Masculino" />
 
-            <!-- Input Numero -->
-            <label class="margen-izquierda" for="DNI">DNI</label>
-            <input id="input" class="margen-casilleros"
-              name="DNI"
-              id="DNI"
-              type="number"
-              placeholder="Ingrese su DNI"
-            />
+              <label class="margen-izquierda" for="Femenino">Femenino</label>
+              <input type="radio" value="opc2" name="Genero" id="Femenino" />
+
+              <label class="margen-izquierda" for="Otro">Otro</label>
+              <input type="radio" value="opc3" name="Genero" id="Otro" />
             </div>
-          </div>
             <hr />
-            <!-- Formulario -->
-            <div class="margen-arriba-y-abajo">
-            <label class="margen-izquierda" for="obrasocial"
-              >Indique si tiene cobertura
-            </label>
-            <select id="input" class="margen-izquierda" name="obrasocial" id="obrasocial">
-              <option value="Particular">No, Particular</option>
-              <option value="OMINT">OMINT</option>
-              <option value="Swiss Medical">Swiss Medical</option>
-              <option value="IOMA">IOMA</option>
-              <option value="COMEI">COMEI</option>
-              <option value="OSPIN">OSPIN</option>
-              <option value="OSMEDICA">OSMEDICA</option>
-              <option value="GALENO">Galeno</option>
-              <option value="PAMI">PAMI</option>
-            </select>
+            <div class="row">
+              <!-- Input nombre -->
+              <div class="form-group col-md-6">
+                <label class="margen-izquierda" for="Nombre">Nombre</label>
+                <input
+                  id="input"
+                  class="margen-casilleros form-control mt-2 mb-3"
+                  name="nombre"
+                  id="nombre"
+                  type="text"
+                  placeholder="Ingrese su Nombre"
+                />
+              </div>
+              <div class="form-group col-md-6">
+                <!-- Input Apellido -->
+                <label class="margen-izquierda" for="apellido">Apellido</label>
+                <input
+                  id="input"
+                  class="margen-casilleros form-control mt-2 mb-3"
+                  name="apellido"
+                  id="apellido"
+                  type="text"
+                  placeholder="Ingrese su Apellido"
+                />
+              </div>
+              <div class="form-group col-md-6">
+                <label class="margen-izquierda" for="Numero">Teléfono</label>
+                <input
+                  id="input"
+                  class="form-control margen-casilleros mt-2 mb-3"
+                  name="Numero"
+                  id="Numero"
+                  type="number"
+                  placeholder="Ingrese su Número"
+                />
+              </div>
+              <div class="form-group col-md-6">
+                <!-- Input Numero -->
+                <label class="margen-izquierda" for="DNI">DNI</label>
+                <input
+                  id="input"
+                  class="form-control margen-casilleros mt-2 mb-3"
+                  name="DNI"
+                  id="DNI"
+                  type="number"
+                  placeholder="Ingrese su DNI"
+                />
+              </div>
+
+              <!-- Formulario -->
+              <div class="fmargen-arriba-y-abajo">
+                <hr />
+                <label class="margen-izquierda" for="obrasocial"
+                  >Indique si tiene cobertura
+                </label>
+                <select
+                  id="input"
+                  class="form-group m-3"
+                  name="obrasocial"
+                  id="obrasocial"
+                >
+                  <option value="Particular">No, Particular</option>
+                  <option value="OMINT">OMINT</option>
+                  <option value="Swiss Medical">Swiss Medical</option>
+                  <option value="IOMA">IOMA</option>
+                  <option value="COMEI">COMEI</option>
+                  <option value="OSPIN">OSPIN</option>
+                  <option value="OSMEDICA">OSMEDICA</option>
+                  <option value="GALENO">Galeno</option>
+                  <option value="PAMI">PAMI</option>
+                </select>
+              </div>
             </div>
-          </div>
-          <hr />
-          <div class="margen-izquierda">
-            <input type="submit" value="Envíar datos" />
-            <input type="reset" value="Reset" />
-          </div>
-        </fieldset>
-      </form>
-     <div class="flex-datos">
+            <hr />
+            <div class="row justify-content-center margen-izquierda">
+              <input type="submit" class="col-md-6" value="Envíar datos" />
+              <input type="reset" class="col-md-6" value="Reset" />
+            </div>
+          </fieldset>
+        </form>
+      </div>
+      <div class="flex-datos">
         <div class="flex-datos__urgencia">
           <h3>Urgencia</h3>
           <p>+541141645847</p>
           <p>consultoriossanjuanlz@gmail.com</p>
         </div>
-        <div class="flex-datos__dirrecion ">
+        <div class="flex-datos__dirrecion">
           <h3>Dirección</h3>
           <p>Oslo 96, Lomas de Zamora</p>
         </div>
       </div>
-      <div class="volver ">
+      <div class="volver">
         <h4><a href="index.html"> Volver </a></h4>
       </div>
     </main>
