--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="./Index.css" />
+    <link rel="stylesheet" href="./index.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,51 +19,77 @@
     ></script>
   </head>
   <body>
-    <header class="header">
-      <picture>
-        <img src="./Fotos/Logo.jpg" alt="Logo" class="header__logo" />
-      </picture>
-      <div class="header__titulo">
-        <h1>ODONTOLOGÍA SAN JUAN</h1>
-      </div>
-      <nav class="header__navegacion">
-        <ul class="header__navegacion--lista">
-          <li><a class="active" href="index.html"> Home </a></li>
-          <li><a href="Tratamientos.html"> Tratamientos</a></li>
-          <li><a href="Profesionales.html"> Profesionales</a></li>
-          <li><a href="Valores.html"> Valores</a></li>
-          <li><a href="Contacto.html"> Contacto</a></li>
-        </ul>
-      </nav>
+     <header>
+      <body>
+        <header class="background">
+          <div class="header">
+          <img src="./Fotos/Logo.jpg" alt="Logo" class="header__logo" />
+          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Menú</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Profesionales</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Tratamientos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#" >Valores</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link "  href="#" >Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+          </div>
     </header>
     <main>
-      <section>
-        <div class="imagenes">
-          <div>
-            <img
-              src="./fotos/Consultorio Odontológico 2.jpg"
-              alt="Consultorio"
-              class="imagen"
-            />
+      <div class="titulo">
+        <h1>ODONTOLOGIA SAN JUAN</h1>
+      </div>
+      <section class="container">
+      <div class="">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 3"></button>
           </div>
-          <div>
-            <img src="./fotos/Cartel 1.jpg" alt="Cartel" class="imagen" />
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./Fotos/Adriana y dina 2.jpg" class="d-block w-100 imagen" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="./Fotos/Adriana y Dina.jpg" class="d-block w-100 imagen" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="./Fotos/Cartel 1.jpg" class="d-block w-100 imagen" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="./Fotos/Consultorio Odontológico 2.jpg" class="d-block w-100 imagen" alt="...">
+            </div>
           </div>
-          <div>
-            <img
-              src="./fotos/Adriana y Dina 2.jpg"
-              alt="Odontologas"
-              class="imagen"
-            />
-          </div>
-          <div>
-            <img
-              src="./Fotos/Adriana y Dina.jpg"
-              alt="Odontologas 2"
-              class="imagen"
-            />
-          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
+      </div>
       </section>
       <div class="container">
         <section class="historia">
