--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Profesionales</a>
+                    <a class="nav-link" href="Profesionales.html">Profesionales</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Tratamientos</a>
+                    <a class="nav-link" href="Tratamientos.html">Tratamientos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#" >Valores</a>
+                    <a class="nav-link" href="Valores.html" >Valores</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link "  href="#" >Contacto</a>
+                    <a class="nav-link "  href="Contacto.html" >Contacto</a>
                   </li>
                 </ul>
               </div>
