Agregué la descripción de cada página

--- a/Contacto.html
+++ b/Contacto.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contacto</title>
+    <meta
+      name="description"
+      content="En esta sección podrá obtener un turno, así como también la dirección y el teléfono por urgencias odontológicas"
+    />
     <link rel="stylesheet" href="./Contacto.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
