--- a/Profesionales.html
+++ b/Profesionales.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profesionales  </title>
+    <title>Profesionales odontológicos</title>
+    <meta name= "description" content= "Les presentamos a nuestros profesionales, ellos cuidarán de su salud y lo harán sentir muy cómodo" />
     <link rel="stylesheet" href="./Profesionales.css" />
   </head>
   <body>
