--- a/Valores.html
+++ b/Valores.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Valores</title>
+    <meta name= "description" 
+    content= "Creemos que los valores son más importante en todo sitio médico, por eso en esta sección le presentamos los nuestros" 
+    />
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
