--- a/Tratamientos.html
+++ b/Tratamientos.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tratamientos</title>
+    <title>Tratamientos Odontológiocos</title>
+    <meta
+      name="description"
+      content="En esta sección podrá observar todos los tratamientos y especialidades en nuestros consultorios odontológicos"
+    />
     <link rel="stylesheet" href="./Tratamientos.css" />
   </head>
   <body>
