--- a/Tratamientos.html
+++ b/Tratamientos.html
@@ -9,6 +9,10 @@
       name="description"
       content="En esta sección podrá observar todos los tratamientos y especialidades en nuestros consultorios odontológicos"
     />
+    <meta
+      name="keywords"
+      content="Odontología, Tratamiento, Ortodoncia, Odontología general, blanqueamiento, dientes blancos, odontología para niños, implantes dentales, placas de relajación, protesis dentaria, limpieza dentaria"
+    />
     <link rel="stylesheet" href="./Tratamientos.css" />
   </head>
   <body>
