--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </script>
     <meta name= "description" 
     content= "Consultorios odontologicos ubicados en Juan XXIII, Lomas de Zamora. Atendemos todos los dias, y diferentes especialidades." />
+    <meta name="keywords" content="Odontología, Dentista, Odontólogos, Odontología pediátrica, Obra social, Odontología infantil, Clínica, Dientes, Salud, Caries, Lomas de Zamora, Zona Sur">
   </head>
   <body>
      <header>
