--- a/Contacto.html
+++ b/Contacto.html
@@ -9,6 +9,10 @@
       name="description"
       content="En esta sección podrá obtener un turno, así como también la dirección y el teléfono por urgencias odontológicas"
     />
+    <meta
+      name="keywords"
+      content="Odontología, Turno odontologico, Turno odontología, Turno odontología rápido, Urgencia dental, Urgencia odontologica, Dolor dental, Dolor de muela, Rotura de dientes, Lomas de Zamora, Zona Sur, Buenos Aires, Monte Grande"
+    />
     <link rel="stylesheet" href="./Contacto.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
