--- a/Valores.html
+++ b/Valores.html
@@ -7,7 +7,8 @@
     <title>Valores</title>
     <meta name= "description" 
     content= "Creemos que los valores son más importante en todo sitio médico, por eso en esta sección le presentamos los nuestros" 
-    />
+    >
+    <meta name="keywords" content="Odontología, Consultorio odontológico, Valores, Cuidados, Codigo de etica salud, Principios odontologicos, Principios de ética, Políticas de salud,">
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
