Acomodé las páginas en la carpeta secciones

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Profesionales.html">Profesionales</a>
+                    <a class="nav-link" href="./Secciones/Profesionales.html">Profesionales</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Tratamientos.html">Tratamientos</a>
+                    <a class="nav-link" href="./Secciones/Tratamientos.html">Tratamientos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Valores.html" >Valores</a>
+                    <a class="nav-link" href="./Secciones/Valores.html" >Valores</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link "  href="Contacto.html" >Contacto</a>
+                    <a class="nav-link "  href="./Secciones/Contacto.html" >Contacto</a>
                   </li>
                 </ul>
               </div>
