Saqué la animacion del menu

--- a/Profesionales.html
+++ b/Profesionales.html
@@ -18,7 +18,7 @@
           <nav class="header__navegacion">
             <ul class="header__navegacion--lista">
               <li><a href="index.html"> Home </a></li>
-              <li><a href="./Secciones/Tratamientos"> Tratamientos</a></li>
+              <li><a href="Tratamientos"> Tratamientos</a></li>
               <li><a class="active" href="Profesionales.html"> Profesionales</a></li>
               <li><a href="Valores.html"> Valores</a></li>
               <li><a href="Contacto.html"> Contacto</a></li>
