--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
                     <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./Secciones/Profesionales.html">Profesionales</a>
+                    <a class="nav-link" href="Profesionales.html">Profesionales</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./Secciones/Tratamientos.html">Tratamientos</a>
+                    <a class="nav-link" href="Tratamientos.html">Tratamientos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./Secciones/Valores.html" >Valores</a>
+                    <a class="nav-link" href="Valores.html" >Valores</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link "  href="./Secciones/Contacto.html" >Contacto</a>
+                    <a class="nav-link "  href="Contacto.html" >Contacto</a>
                   </li>
                 </ul>
               </div>
@@ -71,16 +71,16 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="./Fotos/Adriana y dina 2.jpg" class="d-block w-100 imagen" alt="...">
+              <img src="./Fotos/Adriana y dina 2.jpg" class="d-block w-100 imagen" alt="Profesionales">
             </div>
             <div class="carousel-item">
-              <img src="./Fotos/Adriana y Dina.jpg" class="d-block w-100 imagen" alt="...">
+              <img src="./Fotos/Adriana y Dina.jpg" class="d-block w-100 imagen" alt="Profesionales">
             </div>
             <div class="carousel-item">
-              <img src="./Fotos/Cartel 1.jpg" class="d-block w-100 imagen" alt="...">
+              <img src="./Fotos/Cartel 1.jpg" class="d-block w-100 imagen" alt="Consultorio">
             </div>
             <div class="carousel-item">
-              <img src="./Fotos/Consultorio Odontológico 2.jpg" class="d-block w-100 imagen" alt="...">
+              <img src="./Fotos/Consultorio Odontológico 2.jpg" class="d-block w-100 imagen" alt="Consultorio interior">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
