--- a/Contacto.html
+++ b/Contacto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contacto</title>
+    <title>Contacto Odontología San Juan</title>
     <meta
       name="description"
       content="En esta sección podrá obtener un turno, así como también la dirección y el teléfono por urgencias odontológicas"
@@ -13,7 +13,7 @@
       name="keywords"
       content="Odontología, Turno odontologico, Turno odontología, Turno odontología rápido, Urgencia dental, Urgencia odontologica, Dolor dental, Dolor de muela, Rotura de dientes, Lomas de Zamora, Zona Sur, Buenos Aires, Monte Grande"
     />
-    <link rel="stylesheet" href="./Contacto.css" />
+    <link rel="stylesheet" href="../Contacto.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
