Corregí las mayusculas en cada documento y corregí el bootstrap en el index

--- a/Tratamientos.html
+++ b/Tratamientos.html
@@ -13,7 +13,7 @@
       name="keywords"
       content="Odontología, Tratamiento, Ortodoncia, Odontología general, blanqueamiento, dientes blancos, odontología para niños, implantes dentales, placas de relajación, protesis dentaria, limpieza dentaria"
     />
-    <link rel="stylesheet" href="./Tratamientos.css" />
+    <link rel="stylesheet" href="./tratamientos.css" />
   </head>
   <body>
     <header class="background">
@@ -23,13 +23,13 @@
           <ul class="header__navegacion--lista">
             <li><a href="index.html"> Home </a></li>
             <li>
-              <a class="active" href="Tratamientos.html"> Tratamientos</a>
+              <a class="active" href="tratamientos.html"> Tratamientos</a>
             </li>
             <li>
-              <a href="Profesionales.html"> Profesionales</a>
+              <a href="profesionales.html"> Profesionales</a>
             </li>
-            <li><a href="Valores.html"> Valores</a></li>
-            <li><a href="Contacto.html"> Contacto</a></li>
+            <li><a href="valores.html"> Valores</a></li>
+            <li><a href="contacto.html"> Contacto</a></li>
           </ul>
         </nav>
       </div>
