--- a/Valores.html
+++ b/Valores.html
@@ -19,10 +19,10 @@
         <nav class="header__navegacion">
           <ul class="header__navegacion--lista">
             <li><a href="index.html"> Home </a></li>
-            <li><a href="Tratamientos.html"> Tratamientos</a></li>
-            <li><a href="Profesionales.html"> Profesionales</a></li>
-            <li><a class="active" href="Valores.html"> Valores</a></li>
-            <li><a href="Contacto.html"> Contacto</a></li>
+            <li><a href="tratamientos.html"> Tratamientos</a></li>
+            <li><a href="profesionales.html"> Profesionales</a></li>
+            <li><a class="active" href="valores.html"> Valores</a></li>
+            <li><a href="contacto.html"> Contacto</a></li>
           </ul>
         </nav>
         </div>
