--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name= "description" 
+    content= "Consultorios odontologicos ubicados en Juan XXIII, Lomas de Zamora. Atendemos todos los dias, y diferentes especialidades." />
+    <meta name="keywords" content="Odontología, Dentista, Odontólogos, Odontología pediátrica, Obra social, Odontología infantil, Clínica, Dientes, Salud, Caries, Lomas de Zamora, Zona Sur">
     <title>Odontología San Juan</title>
     <link rel="stylesheet" href="./index.css" />
     <link
@@ -12,14 +15,7 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-    <script>
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-      crossorigin="anonymous"
-    </script>
-    <meta name= "description" 
-    content= "Consultorios odontologicos ubicados en Juan XXIII, Lomas de Zamora. Atendemos todos los dias, y diferentes especialidades." />
-    <meta name="keywords" content="Odontología, Dentista, Odontólogos, Odontología pediátrica, Obra social, Odontología infantil, Clínica, Dientes, Salud, Caries, Lomas de Zamora, Zona Sur">
+
   </head>
   <body>
      <header>
@@ -36,19 +32,19 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Profesionales.html">Profesionales</a>
+                    <a class="nav-link" href="profesionales.html">Profesionales</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Tratamientos.html">Tratamientos</a>
+                    <a class="nav-link" href="tratamientos.html">Tratamientos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Valores.html" >Valores</a>
+                    <a class="nav-link" href="valores.html" >Valores</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link "  href="Contacto.html" >Contacto</a>
+                    <a class="nav-link "  href="contacto.html" >Contacto</a>
                   </li>
                 </ul>
               </div>
@@ -174,5 +170,10 @@
         </div>
       </div>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
