--- a/Contacto.html
+++ b/Contacto.html
@@ -13,35 +13,55 @@
       name="keywords"
       content="Odontología, Turno odontologico, Turno odontología, Turno odontología rápido, Urgencia dental, Urgencia odontologica, Dolor dental, Dolor de muela, Rotura de dientes, Lomas de Zamora, Zona Sur, Buenos Aires, Monte Grande"
     />
-    <link rel="stylesheet" href="../Contacto.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-      crossorigin="anonymous"
-    ></script>
+    <link rel="stylesheet" href="../Contacto.css" />
   </head>
   <body>
-    <header class="background">
-      <div class="header">
-        <img src="./Fotos/Logo.jpg" alt="Logo" class="header__logo" />
-        <nav class="header__navegacion">
-          <ul class="header__navegacion--lista">
-            <li><a href="index.html"> Home </a></li>
-            <li><a href="tratamientos.html"> Tratamientos</a></li>
-            <li>
-              <a class="active" href="profesionales.html"> Profesionales</a>
-            </li>
-            <li><a href="valores.html"> Valores</a></li>
-            <li><a href="contacto.html"> Contacto</a></li>
-          </ul>
-        </nav>
-      </div>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark background">
+        <div class="container-fluid navegacion">
+          <a class="navbar-brand" href="./index.html"
+            ><img src="./Fotos/Logo.jpg" alt="Logo" class="logo"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="index.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="profesionales.html">Profesionales</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="tratamientos.html">Tratamientos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="valores.html">Valores</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
     <main>
       <div class="titulo">
@@ -159,5 +179,10 @@
         <h4><a href="index.html"> Volver </a></h4>
       </div>
     </main>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
