--- a/Tratamientos.html
+++ b/Tratamientos.html
@@ -13,26 +13,57 @@
       name="keywords"
       content="Odontología, Tratamiento, Ortodoncia, Odontología general, blanqueamiento, dientes blancos, odontología para niños, implantes dentales, placas de relajación, protesis dentaria, limpieza dentaria"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./tratamientos.css" />
   </head>
   <body>
-    <header class="background">
-      <div class="header">
-        <img src="./Fotos/Logo.jpg" alt="Logo" class="header__logo" />
-        <nav class="header__navegacion">
-          <ul class="header__navegacion--lista">
-            <li><a href="index.html"> Home </a></li>
-            <li>
-              <a class="active" href="tratamientos.html"> Tratamientos</a>
-            </li>
-            <li>
-              <a href="profesionales.html"> Profesionales</a>
-            </li>
-            <li><a href="valores.html"> Valores</a></li>
-            <li><a href="contacto.html"> Contacto</a></li>
-          </ul>
-        </nav>
-      </div>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark background">
+        <div class="container-fluid navegacion">
+          <a class="navbar-brand" href="./index.html"
+            ><img src="./Fotos/Logo.jpg" alt="Logo" class="logo"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="index.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="profesionales.html">Profesionales</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="tratamientos.html"
+                  >Tratamientos</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="valores.html">Valores</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
     <main>
       <div class="titulo">
@@ -101,5 +132,10 @@
         <h4><a href="index.html"> Volver </a></h4>
       </div>
     </main>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
