--- a/index.html
+++ b/index.html
@@ -4,91 +4,160 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name= "description" 
-    content= "Consultorios odontologicos ubicados en Juan XXIII, Lomas de Zamora. Atendemos todos los dias, y diferentes especialidades." />
-    <meta name="keywords" content="Odontología, Dentista, Odontólogos, Odontología pediátrica, Obra social, Odontología infantil, Clínica, Dientes, Salud, Caries, Lomas de Zamora, Zona Sur">
+    <meta
+      name="description"
+      content="Consultorios odontologicos ubicados en Juan XXIII, Lomas de Zamora. Atendemos todos los dias, y diferentes especialidades."
+    />
+    <meta
+      name="keywords"
+      content="Odontología, Dentista, Odontólogos, Odontología pediátrica, Obra social, Odontología infantil, Clínica, Dientes, Salud, Caries, Lomas de Zamora, Zona Sur"
+    />
     <title>Odontología San Juan</title>
-    <link rel="stylesheet" href="./index.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-     <header>
-      <body>
-        <header class="background">
-          <div class="header">
-          <img src="./Fotos/Logo.jpg" alt="Logo" class="header__logo" />
-          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Menú</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="profesionales.html">Profesionales</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="tratamientos.html">Tratamientos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="valores.html" >Valores</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link "  href="contacto.html" >Contacto</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark background">
+        <div class="container-fluid navegacion">
+          <a class="navbar-brand" href="./index.html"
+            ><img src="./Fotos/Logo.jpg" alt="Logo" class="logo"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="profesionales.html">Profesionales</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="tratamientos.html">Tratamientos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="valores.html">Valores</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contacto.html">Contacto</a>
+              </li>
+            </ul>
           </div>
+        </div>
+      </nav>
     </header>
     <main>
       <div class="titulo">
         <h1>ODONTOLOGIA SAN JUAN</h1>
       </div>
       <section class="container">
-      <div class="">
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 3"></button>
+        <div class="">
+          <div
+            id="carouselExampleIndicators"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="3"
+                aria-label="Slide 3"
+              ></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="./Fotos/Adriana y dina 2.jpg"
+                  class="d-block w-100 imagen"
+                  alt="Profesionales"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./Fotos/Adriana y Dina.jpg"
+                  class="d-block w-100 imagen"
+                  alt="Profesionales"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./Fotos/Cartel 1.jpg"
+                  class="d-block w-100 imagen"
+                  alt="Consultorio"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./Fotos/Consultorio Odontológico 2.jpg"
+                  class="d-block w-100 imagen"
+                  alt="Consultorio interior"
+                />
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="./Fotos/Adriana y dina 2.jpg" class="d-block w-100 imagen" alt="Profesionales">
-            </div>
-            <div class="carousel-item">
-              <img src="./Fotos/Adriana y Dina.jpg" class="d-block w-100 imagen" alt="Profesionales">
-            </div>
-            <div class="carousel-item">
-              <img src="./Fotos/Cartel 1.jpg" class="d-block w-100 imagen" alt="Consultorio">
-            </div>
-            <div class="carousel-item">
-              <img src="./Fotos/Consultorio Odontológico 2.jpg" class="d-block w-100 imagen" alt="Consultorio interior">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
         </div>
-      </div>
       </section>
       <div class="container">
         <section class="historia">
