Agregué bootstrap a la tabla en sección tratamientos

--- a/Profesionales.html
+++ b/Profesionales.html
@@ -5,37 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profesionales odontológicos</title>
-    <meta name= "description" content= "Les presentamos a nuestros profesionales, ellos cuidarán de su salud y lo harán sentir muy cómodo" />
-    <meta name="keywords" content="Odontologos, Odontología, Dentistas, Profesionales, Carrera odontológica, Odontologia Lomas de Zamora">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <meta
+      name="description"
+      content="Les presentamos a nuestros profesionales, ellos cuidarán de su salud y lo harán sentir muy cómodo"
+    />
+    <meta
+      name="keywords"
+      content="Odontologos, Odontología, Dentistas, Profesionales, Carrera odontológica, Odontologia Lomas de Zamora"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./Profesionales.css" />
   </head>
   <body>
-    <header>     
+    <header>
       <nav class="navbar navbar-expand-lg navbar-dark background">
         <div class="container-fluid navegacion">
-          <a class="navbar-brand" href="./index.html"><img src="./Fotos/Logo.jpg" alt="Logo" class="logo" /></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-           <span class="navbar-toggler-icon"></span>
+          <a class="navbar-brand" href="./index.html"
+            ><img src="./Fotos/Logo.jpg" alt="Logo" class="logo"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link" aria-current="page" href="index.html"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="profesionales.html">Profesionales</a>
+                <a class="nav-link active" href="profesionales.html"
+                  >Profesionales</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="tratamientos.html">Tratamientos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="valores.html" >Valores</a>
+                <a class="nav-link" href="valores.html">Valores</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link "  href="contacto.html" >Contacto</a>
+                <a class="nav-link" href="contacto.html">Contacto</a>
               </li>
-            </ul>     
+            </ul>
           </div>
         </div>
       </nav>
@@ -44,97 +69,108 @@
       <div class="titulo">
         <h1>PROFESIONALES</h1>
       </div>
-      <section>
-        <div class="row"> 
-          <div>
-            <h3>Adriana Lobosco</h3>
+      <div class="container">
+        <section class="row">
+          <div class="col-md-6">
+            <div>
+              <h3>Adriana Lobosco</h3>
+            </div>
+            <div>
+              <img
+                src="Fotos/Odontologa 1.jpg"
+                alt="Odontologa"
+                width="300"
+                height="200"
+              />
+            </div>
+            <div>
+              <ul>
+                <li>Odontóloga</li>
+                <li>MP.23505 / MN. 26732</li>
+                <li>Recibida en UBA / Año 1999</li>
+                <li>
+                  Especialidad en Odontología general, con niños y personas con
+                  discapacidad
+                </li>
+              </ul>
+            </div>
           </div>
-          <div>
-            <img
-              src="Fotos/Odontologa 1.jpg"
-              alt="Odontologa"
-              width="300"
-              height="200"
-            />
+          <div class="col-md-6">
+            <div>
+              <h3>Rocio Fernandez Furnari</h3>
+            </div>
+            <div>
+              <img
+                src="fotos/Odontologo 2.jpg"
+                alt="Odontologo"
+                width="300"
+                height="200"
+              />
+            </div>
+            <div>
+              <ul>
+                <li>Odontóloga</li>
+                <li>MP. 25103</li>
+                <li>Recibida en UBA / Año 2010</li>
+                <li>Especialidad en Odontología General y Odontopediatria</li>
+              </ul>
+            </div>
           </div>
-          <div>
-            <ul>
-              <li>Odontóloga</li>
-              <li>MP.23505 / MN. 26732</li>
-              <li>Recibida en UBA / Año 1999</li>
-              <li>
-                Especialidad en Odontología general, con niños y personas con
-                discapacidad
-              </li>
-            </ul>
+          <div class="col-md-6">
+            <div>
+              <h3>Dina Marianela Rodríguez</h3>
+            </div>
+            <div>
+              <img
+                src="fotos/odontologo 3.jpg"
+                alt="Odontologo"
+                width="300"
+                height="200"
+              />
+            </div>
+            <div>
+              <ul>
+                <li>Ortodoncista</li>
+                <li>MP. 24198 / MN. 260603</li>
+                <li>Recibida en UNNE / Año 2002</li>
+                <li>
+                  Especialidad en Odontopediatria, Ortodoncia y Ortopedia de los
+                  maxilares
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
-          <div>
-            <h3>Rocio Fernandez Furnari</h3>
+          <div class="col-md-6">
+            <div>
+              <h3>Carolina Inés Nuñez</h3>
+            </div>
+            <div>
+              <img
+                src="fotos/Odontologa 4.jpeg"
+                alt="Odontologa"
+                width="300"
+                height="200"
+              />
+            </div>
+            <div>
+              <ul>
+                <li>Odontóloga</li>
+                <li>MP. 32315</li>
+                <li>Recibida en UBA / Año 1999</li>
+                <li>Especialidad en Endodoncia</li>
+              </ul>
+            </div>
           </div>
-          <div >
-            <img
-              src="fotos/Odontologo 2.jpg"
-              alt="Odontologo"
-              width="300"
-              height="200"
-            />
-          </div>
-          <div>
-            <ul>
-              <li>Odontóloga</li>
-              <li>MP. 25103</li>
-              <li>Recibida en UBA / Año 2010</li>
-              <li>Especialidad en Odontología General y Odontopediatria</li>
-            </ul>
-          </div>
-          <div>
-            <h3>Dina Marianela Rodríguez</h3>
-          </div>
-          <div>
-            <img
-              src="fotos/odontologo 3.jpg"
-              alt="Odontologo"
-              width="300"
-              height="200"
-            />
-          </div>
-          <div>
-            <ul>
-              <li>Ortodoncista</li>
-              <li>MP. 24198 / MN. 260603</li>
-              <li>Recibida en UNNE / Año 2002</li>
-              <li>
-                Especialidad en Odontopediatria, Ortodoncia y Ortopedia de los
-                maxilares
-              </li>
-            </ul>
-          </div>
-          <div>
-            <h3>Carolina Inés Nuñez</h3>
-          </div>
-          <div>
-            <img
-              src="fotos/Odontologa 4.jpeg"
-              alt="Odontologa"
-              width="300"
-              height="200"
-            />
-          </div>
-          <div>
-            <ul>
-              <li>Odontóloga</li>
-              <li>MP. 32315</li>
-              <li>Recibida en UBA / Año 1999</li>
-              <li>Especialidad en Endodoncia</li>
-            </ul>
-          </div>
-        </div>
-      </section>
+        </section>
+      </div>
       <div class="volver">
         <h4><a href="index.html"> Volver </a></h4>
       </div>
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
