--- a/Tratamientos.html
+++ b/Tratamientos.html
@@ -69,63 +69,67 @@
       <div class="titulo">
         <h1>TRATAMIENTOS</h1>
       </div>
-      <section class="posicion-table">
-        <table>
-          <tr>
-            <th>Tratamiento</th>
-            <th>Descripción</th>
-            <th>Desde...</th>
-          </tr>
-          <tr>
-            <td>Ortodoncia</td>
-            <td>Aparatología estética de última generación</td>
-            <td>$1000</td>
-          </tr>
-          <tr>
-            <td>Odontología General</td>
-            <td>Descripción Odontología General</td>
-            <td>$1000</td>
-          </tr>
-          <tr>
-            <td>Atención a niños y adolescentes</td>
-            <td>Descripción Atención a niños y adolescentes</td>
-            <td>$1000</td>
-          </tr>
-          <tr>
-            <td>Blanqueamiento dental</td>
-            <td>Descripción Blanqueamiento dental</td>
-            <td>$2000</td>
-          </tr>
-          <tr>
-            <td>Implante dental</td>
-            <td>Descripción Implante dental</td>
-            <td>$3000</td>
-          </tr>
-          <tr>
-            <td>Tratamiento de conducto</td>
-            <td>Descripción Tratamiento de conducto</td>
-            <td>$4000</td>
-          </tr>
-          <tr>
-            <td>Placas de relajación</td>
-            <td>Descripción Placas de relaación</td>
-            <td>$6000</td>
-          </tr>
-          <tr>
-            <td>Protesis dentaria</td>
-            <td>Descripción protesis dentaria</td>
-            <td>$7000</td>
-          </tr>
-          <tr>
-            <td>Estética y restaurado</td>
-            <td>Descripción Estética y restaurado</td>
-            <td>$8000</td>
-          </tr>
-          <tr>
-            <td>Limpieza dentaria</td>
-            <td>Descripción Limpieza dentaria</td>
-            <td>$9000</td>
-          </tr>
+      <section class="container contenedor">
+        <table class="table table-dark table-striped">
+          <thead>
+            <tr>
+              <th scope="col">Tratamiento</th>
+              <th scope="col">Descripción</th>
+              <th scope="col">Desde...</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">Ortodoncia</th>
+              <td>Aparatología estética de última generación</td>
+              <td>$1000</td>
+            </tr>
+            <tr>
+              <th scope="row">Odontología General</th>
+              <td>Descripción Odontología General</td>
+              <td>$1000</td>
+            </tr>
+            <tr>
+              <th scope="row">Atención a niños y adolescentes</th>
+              <td>Descripción Atención a niños y adolescentes</td>
+              <td>$1000</td>
+            </tr>
+            <tr>
+              <th scope="row">Blanqueamiento dental</th>
+              <td>Descripción Blanqueamiento dental</td>
+              <td>$2000</td>
+            </tr>
+            <tr>
+              <th scope="row">Implante dental</th>
+              <td>Descripción Implante dental</td>
+              <td>$3000</td>
+            </tr>
+            <tr>
+              <th scope="row">Tratamiento de conducto</th>
+              <td>Descripción Tratamiento de conducto</td>
+              <td>$4000</td>
+            </tr>
+            <tr>
+              <th scope="row">Placas de relajación</th>
+              <td>Descripción Placas de relaación</td>
+              <td>$6000</td>
+            </tr>
+            <tr>
+              <th scope="row">Protesis dentaria</th>
+              <td>Descripción protesis dentaria</td>
+              <td>$7000</td>
+            </tr>
+            <tr>
+              <th scope="row">Estética y restaurado</th>
+              <td>Descripción Estética y restaurado</td>
+              <td>$8000</td>
+            </tr>
+            <tr>
+              <th scope="row">Limpieza dentaria</th>
+              <td>Descripción Limpieza dentaria</td>
+              <td>$9000</td>
+            </tr>
+          </tbody>
         </table>
       </section>
       <div class="volver">
