Comentarios en HTML

--- a/Tratamientos.html
+++ b/Tratamientos.html
@@ -133,6 +133,7 @@
         </table>
       </section>
       <div class="volver">
+        <!--Volver a la página de inicio-->
         <h4><a href="index.html"> Volver </a></h4>
       </div>
     </main>
