--- a/Contacto.html
+++ b/Contacto.html
@@ -65,6 +65,7 @@
     </header>
     <main>
       <div class="titulo">
+        <!--Titulo-->
         <h1>CONTACTO</h1>
       </div>
       <div class="row">
@@ -109,6 +110,7 @@
                 />
               </div>
               <div class="form-group col-md-6">
+                <!-- Input numero -->
                 <label class="margen-izquierda" for="Numero">Teléfono</label>
                 <input
                   id="input"
@@ -120,7 +122,7 @@
                 />
               </div>
               <div class="form-group col-md-6">
-                <!-- Input Numero -->
+                <!-- Input DNI -->
                 <label class="margen-izquierda" for="DNI">DNI</label>
                 <input
                   id="input"
@@ -132,7 +134,7 @@
                 />
               </div>
 
-              <!-- Formulario -->
+              <!-- Desplegable para indicar cobertura -->
               <div class="fmargen-arriba-y-abajo">
                 <hr />
                 <label class="margen-izquierda" for="obrasocial"
@@ -157,13 +159,15 @@
               </div>
             </div>
             <hr />
+            <!-- Botones de enviar y resetear -->
             <div class="row justify-content-center margen-izquierda">
-              <input type="submit" class="col-md-6" value="Envíar datos" />
-              <input type="reset" class="col-md-6" value="Reset" />
+              <input type="submit" class="col-md-5" value="Envíar datos" />
+              <input type="reset" class="col-md-5" value="Reset" />
             </div>
           </fieldset>
         </form>
       </div>
+      <!--Pie de página con información-->
       <div class="flex-datos">
         <div class="flex-datos__urgencia">
           <h3>Urgencia</h3>
@@ -176,6 +180,7 @@
         </div>
       </div>
       <div class="volver">
+        <!--Volver a la página de inicio-->
         <h4><a href="index.html"> Volver </a></h4>
       </div>
     </main>
