--- a/Profesionales.html
+++ b/Profesionales.html
@@ -25,6 +25,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark background">
         <div class="container-fluid navegacion">
+          <!--Logo-->
           <a class="navbar-brand" href="./index.html"
             ><img src="./Fotos/Logo.jpg" alt="Logo" class="logo"
           /></a>
