--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
   </head>
   <body>
     <header>
+      <!--Header que incluye navbar y logo-->
       <nav class="navbar navbar-expand-lg navbar-dark background">
         <div class="container-fluid navegacion">
+          <!--Logo-->
           <a class="navbar-brand" href="./index.html"
             ><img src="./Fotos/Logo.jpg" alt="Logo" class="logo"
           /></a>
@@ -65,16 +67,19 @@
     </header>
     <main>
       <div class="titulo">
+        <!--Titulo-->
         <h1>ODONTOLOGIA SAN JUAN</h1>
       </div>
       <section class="container">
-        <div class="">
+        <!--Carrusel con imagenes varias-->
+        <div>
           <div
             id="carouselExampleIndicators"
             class="carousel slide"
             data-bs-ride="carousel"
           >
             <div class="carousel-indicators">
+              <!--Botones del Carrusel-->
               <button
                 type="button"
                 data-bs-target="#carouselExampleIndicators"
@@ -103,6 +108,7 @@
               ></button>
             </div>
             <div class="carousel-inner">
+              <!--Imagenes del Carrusel-->
               <div class="carousel-item active">
                 <img
                   src="./Fotos/Adriana y dina 2.jpg"
@@ -132,6 +138,7 @@
                 />
               </div>
             </div>
+            <!--Flechas del Carrusel-->
             <button
               class="carousel-control-prev"
               type="button"
@@ -160,6 +167,7 @@
         </div>
       </section>
       <div class="container">
+        <!--Textos de historia-->
         <section class="historia">
           <div class="row textos">
             <article class="col-md-5">
@@ -222,7 +230,7 @@
         </section>
       </div>
     </main>
-
+    <!--Pie de página con información-->
     <footer>
       <div>
         <h2>Información</h2>
@@ -239,6 +247,7 @@
         </div>
       </div>
     </footer>
+    <!--Para que funcione el carrusel-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
