cree todos los archivos de scss

--- a/Tratamientos.html
+++ b/Tratamientos.html
@@ -66,19 +66,19 @@
       </nav>
     </header>
     <main>
-      <div class="titulo">
+      <div class="titulo"> <!--Titulo-->
         <h1>TRATAMIENTOS</h1>
       </div>
-      <section class="container contenedor">
-        <table class="table table-dark table-striped">
-          <thead>
-            <tr>
+      <section class="container contenedor"> <!--Contenedores de tabla-->
+        <table class="table table-dark table-striped"> <!--Estilo de tabla-->
+          <thead> <!--Encabezado tabla-->
+            <tr> 
               <th scope="col">Tratamiento</th>
               <th scope="col">Descripción</th>
               <th scope="col">Desde...</th>
             </tr>
           </thead>
-          <tbody>
+          <tbody> <!--Contenido tabla-->
             <tr>
               <th scope="row">Ortodoncia</th>
               <td>Aparatología estética de última generación</td>
