--- a/Profesionales.html
+++ b/Profesionales.html
@@ -29,6 +29,7 @@
           <a class="navbar-brand" href="./index.html"
             ><img src="./Fotos/Logo.jpg" alt="Logo" class="logo"
           /></a>
+          <!--Menú hamburguesa-->
           <button
             class="navbar-toggler"
             type="button"
@@ -40,7 +41,7 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="collapse navbar-collapse" id="navbarNav"> <!--Navbar normal-->
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="index.html"
@@ -68,11 +69,11 @@
     </header>
     <main>
       <div class="titulo">
-        <h1>PROFESIONALES</h1>
+        <h1>PROFESIONALES</h1> <!--Título-->
       </div>
-      <div class="container">
+      <div class="container"> <!--Profesionales, dividos por columnas de 6-->
         <section class="row">
-          <div class="col-md-6">
+          <div class="col-md-6"> <!--Primer profesional-->
             <div>
               <h3>Adriana Lobosco</h3>
             </div>
@@ -96,7 +97,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6"> <!--Segundo profesional-->
             <div>
               <h3>Rocio Fernandez Furnari</h3>
             </div>
@@ -117,7 +118,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6"> <!--Tercer profesional-->
             <div>
               <h3>Dina Marianela Rodríguez</h3>
             </div>
@@ -141,7 +142,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6"> <!--Cuarto profesional-->
             <div>
               <h3>Carolina Inés Nuñez</h3>
             </div>
@@ -164,7 +165,7 @@
           </div>
         </section>
       </div>
-      <div class="volver">
+      <div class="volver"> <!--Volver a la página de inicio-->
         <h4><a href="index.html"> Volver </a></h4>
       </div>
     </main>
